// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > Render <Table/> with 1 header and 1 item 1`] = `
<DocumentFragment>
  <table
    class="af-table af-table--classModifier"
  >
    <thead
      aria-label="En-tête du tableau de données"
      class="af-table__thead"
    >
      <tr
        aria-label="Ligne de l'en-tête du tableau de données"
        class="af-table__tr"
      >
        <th
          class="af-table__th"
          role="columnheader"
          scope="col"
        >
          <span
            class="af-table__th-label"
          >
            label
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      aria-label="Corps du tableau de données"
      class="af-table__body"
    >
      <tr
        aria-label="Ligne 1 du tableau de données"
        class="af-table__tr"
      >
        <td
          class="af-table__cell"
        >
          samuel
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table > Render <Table/> with empty items 1`] = `
<DocumentFragment>
  <table
    class="af-table af-table--classModifier"
  >
    <thead
      aria-label="En-tête du tableau de données"
      class="af-table__thead"
    >
      <tr
        aria-label="Ligne de l'en-tête du tableau de données"
        class="af-table__tr"
      />
    </thead>
    <tbody
      aria-label="Corps du tableau de données"
      class="af-table__body"
    />
  </table>
</DocumentFragment>
`;
